chore: .gitignore 수정

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,9 @@ out/
 
 ### Oauth ###
 application-oauth.properties
+
+### Aws ###
+application-aws.properties
+
+### Jwt ###
+application-jwt.properties
