feat: Modification - application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,14 @@
-spring.session.store-type=jdbc
-spring.profiles.include=oauth, aws
+spring.profiles.include=oauth
+
+# AWS Account Credentials (AWS ?? ?)
+cloud.aws.credentials.accessKey={????}
+cloud.aws.credentials.secretKey={??? ??? ?}
+
+# AWS S3 bucket Info (S3 ????)
+cloud.aws.s3.bucket={S3 ?? ??)
+cloud.aws.region.static=ap-northeast-2 (S3 ?? ??)
+cloud.aws.stack.auto=false
+
+# file upload max size (?? ??? ?? ??)
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=20MB
