--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,13 @@ dependencies {
 
 	implementation 'io.springfox:springfox-boot-starter:3.0.0'
 	implementation 'io.springfox:springfox-swagger-ui:3.0.0'
+
+	implementation 'org.springframework.boot:spring-boot-starter'
+	implementation 'org.projectlombok:lombok:1.18.26'
+	implementation 'org.springframework.session:spring-session-jdbc'
+	implementation 'com.auth0:java-jwt:4.3.0'
+	implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.1'
+
 }
 
 tasks.named('test') {
