feat: Modification - application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.profiles.include=oauth
+spring.profiles.include=oauth, aws
+spring.session.store-type=jdbc
 
 # AWS Account Credentials (AWS ?? ?)
 cloud.aws.credentials.accessKey={????}
