--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,6 @@ repositories {
 }
 
 dependencies {
-    implementation 'mysql:mysql-connector-java'
-
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-security'
@@ -35,7 +33,7 @@ dependencies {
     implementation 'org.springframework.session:spring-session-jdbc'
     implementation 'com.auth0:java-jwt:4.3.0'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.1'
-
+    implementation 'com.mysql:mysql-connector-j'
 }
 
 tasks.named('test') {
