--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,16 @@
-spring.profiles.include=oauth, aws
+spring.profiles.include=oauth, aws, jwt
 spring.session.store-type=jdbc
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
 # AWS Account Credentials (AWS ?? ?)
-cloud.aws.credentials.accessKey={????}
-cloud.aws.credentials.secretKey={??? ??? ?}
+cloud.aws.credentials.accessKey=AKIAWGR3HPH734MTPUEJ
+cloud.aws.credentials.secretKey=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
 
 # AWS S3 bucket Info (S3 ????)
 cloud.aws.s3.bucket={S3 ?? ??)
-cloud.aws.region.static=ap-northeast-2 (S3 ?? ??)
+cloud.aws.region.static=ap-northeast-2
 cloud.aws.stack.auto=false
 
 # file upload max size (?? ??? ?? ??)
-spring.servlet.multipart.max-file-size=20MB
-spring.servlet.multipart.max-request-size=20MB
+#spring.servlet.multipart.max-file-size=20MB
+#spring.servlet.multipart.max-request-size=20MB
