--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'com.auth0:java-jwt:4.3.0'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.1'
     implementation 'com.mysql:mysql-connector-j'
+    implementation 'javax.servlet:javax.servlet-api:4.0.1'
 }
 
 tasks.named('test') {
