--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.profiles.include=oauth, aws, jwt
 spring.session.store-type=jdbc
+spring.session.jdbc.initialize-schema=always
+#spring.session.timeout.seconds=900
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
-
+#spring.session.jdbc.initialize-schema=always spring.session.jdbc.schema=classpath:org/springframework/session/jdbc/schema-mysql.sql
 
 cloud.aws.stack.auto=false
 
