--- a/build.gradle
+++ b/build.gradle
@@ -26,14 +26,11 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-    implementation 'io.springfox:springfox-boot-starter:3.0.0'
-    implementation 'io.springfox:springfox-swagger-ui:3.0.0'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'
 
-    implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.projectlombok:lombok:1.18.26'
     implementation 'org.springframework.session:spring-session-jdbc'
     implementation 'com.auth0:java-jwt:4.3.0'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.1'
     implementation 'com.mysql:mysql-connector-j'
     implementation 'javax.servlet:javax.servlet-api:4.0.1'
 }
