--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,13 @@ cloud.aws.stack.auto=false
 # file upload max size (?? ??? ?? ??)
 #spring.servlet.multipart.max-file-size=20MB
 #spring.servlet.multipart.max-request-size=20MB
+springdoc.version=v1.0.0
+springdoc.packages-to-scan=com.fs.filemarket
+springdoc.swagger-ui.path=/api-docs
+springdoc.swagger-ui.tags-sorter=alpha
+springdoc.swagger-ui.operations-sorter=alpha
+springdoc.api-docs.path=/api-docs/json
+springdoc.api-docs.groups.enabled=true
+springdoc.cache.disabled=true
+springdoc.default-consumes-media-type=application/json;charset=UTF-8
+springdoc.default-produces-media-type=application/json;charset=UTF-8
