--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 #spring.session.jdbc.initialize-schema=always spring.session.jdbc.schema=classpath:org/springframework/session/jdbc/schema-mysql.sql
 
 cloud.aws.stack.auto=false
+spring.mvc.hiddenmethod.filter.enabled=true
 
 # file upload max size (?? ??? ?? ??)
 #spring.servlet.multipart.max-file-size=20MB
