--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.include=oauth, aws, jwt
+spring.profiles.include=oauth, aws, jwt, s3
 spring.session.store-type=jdbc
 spring.session.jdbc.initialize-schema=always
 #spring.session.timeout.seconds=900
